# addev

./: .gitignore  index.html
.github/workflows/: deploy-pages-10.yml
AD/: ftp.html  index.html  tmp.tar.zst
AD/AD/: synch.sh  tmp.tar.zst
AD/AD-adb(iOS)/: README.md  adb.zsh
AD/AD/adsu/: build.sh
AD/AD/adsu/builds/: auxbuild.sh
AD/AD/create/: build.sh  include
AD/AD/create/Old/: ADcreate  adcreate  init.sh
AD/AD/dm/: CMakeLists.txt.old  dm.cc  init.fish.sh
AD/AD/dpkg-force-install/: 1.json  dpkg.sh  other-reference.tar.zst  synch.sh
AD/AD/dpkg-force-install/com.nan.dpkg-file/: libexec.com.nan.dpkg-fill.plist  libexec.dpkg-fill.sh  sbin.dpkg-fill.sh
AD/AD/login/: build.sh  login
AD/AD/opt/: init.sh  opt.cc
AD/AD/proc/: procctl.sh
AD/AD/proc/Homebrews/: Distribution
AD/AD/rm/: CMakeLists.txt  init.sh
AD/AD/rm/old/: ADrm.old  ADrm.old.cc
AD/AD/shell/src/: adsh
AD/AD/tmp/iOS Xcode/: LICENSE-C.md  LICENSE.md  init.sh
AD/adb(iOS)/: adb.zsh
AD/conradev_jetsamctl/: index.html
AD/conradev_jetsamctl/theos/: index.html
AD/tmp/AD/: AD
AD/tmp/AD/adsu/: adsu.cc  adsu.old.cc  init.sh
AD/tmp/AD/create/: adcreate.cc
AD/tmp/AD/dm/: CMakeLists.txt  init.sh
AD/tmp/AD/dm/test/: 1.deb
AD/tmp/AD/dm/test/1/DEBIAN/: control
AD/tmp/AD/dpkg-force-install/: apt  patch.sh
AD/tmp/AD/login/: login.cc
AD/tmp/AD/mkuser/: mkuser  mkuset.sh
AD/tmp/AD/opt/: opt  test.pkg
AD/tmp/AD/rm/: ADrm  ADrm.cc  build.txt  confine.ini
Other/: Reallyjump.html  Waiting.html
Other/ad_repo/: reallyjump.html  waiting.html
css/: style.css
(+46 files in other folders)
